Noteworthy changes in version 2.2.48 (unreleased)
-------------------------------------------------


Noteworthy changes in version 2.2.47 (2025-04-09)
-------------------------------------------------

  * gpg: Fix double free of internal data in --no-sig-cache mode.
    [T7547]

  * scd: Fix posssible lockup on Windows due to lost select results.
    [T2982]


Noteworthy changes in version 2.2.46 (2025-01-07)
-------------------------------------------------

  * gpg: Add the AEAD algo number to the DECRYPTION_INFO status line.
    [T7398]

  * gpgtar: Make sure to create upper directories for regular files.
    [T7380]

  * gpg: Allow the use of an ADSK subkey as ADSK subkey.  [T6882]

  * agent: Fix status output for LISTTRUSTED.  [T7363]

  Release-info: https://dev.gnupg.org/T7314


Noteworthy changes in version 2.2.45 (2024-10-22)
-------------------------------------------------

  * gpg: New command --quick-add-adsk  [T6395]

  * gpg: New option --default-new-key-adsk and "addadsk" for
    --edit-key.  [T6882]

  * gpg: New option --proc-all-sigs.  [T7261]

  * gpg: Allow import of keys with unknown subkey packet versions.
    [rGb357ff2aa6]

  * gpg: Avoid a wrong decryption failed status if a messages is
    signed and OCB encrypted but the pubkey for verification is
    missing.  [T7042]

  * gpg: Validate the trustdb after the import of a trusted key.
    [T7200]

  * gpg: Exclude expired trusted keys from the key validation process.
    [T7200]

  * gpgsm: Nearly fourfold speedup of validated certificate listings.
    [T7308]

  * agent: Fix KEYTOCARD for the use case with loopback pinentry.
    [T7283]

  * dirmngr: A list of used URLs for loaded CRLs is printed first in
    the output of the LISTCRL command.  [T7337]

  * gpgconf: Allow listing of options --trusted-key,
    add-desig-revoker, and default-new-key-adsk.  [T6882]

  Release-info: https://dev.gnupg.org/T7255


Noteworthy changes in version 2.2.44 (2024-08-12)